--- a/resume2.html
+++ b/resume2.html
@@ -45,6 +45,8 @@
     <li>A Sentence about the responsibilities of the job</li>
   </ul>
 
+  <h3>Skills</h3>
+
   <ul>
     <li>Skill 1</li>
     <li>Skill 2</li>
